--- a/client/src/components/main/mainChat/MainChat.css
+++ b/client/src/components/main/mainChat/MainChat.css
@@ -66,6 +66,7 @@
   height: 3.5rem;
 }
 .main-chat .main-chat-footer input {
+  color: white;
   height: 100%;
   background-color: #2a3942;
   border: 0.001rem solid #2a3942;
