--- a/client/src/components/main/mainChat/MainChat.scss
+++ b/client/src/components/main/mainChat/MainChat.scss
@@ -66,6 +66,7 @@
     background-color: #202c33;
     height: 3.5rem;
     input {
+      color:white;
       height: 100%;
       background-color: #2a3942;
       border: 0.001rem solid #2a3942;
