--- a/client/src/components/main/mainChat/MainChat.css
+++ b/client/src/components/main/mainChat/MainChat.css
@@ -24,13 +24,32 @@
   gap: 3rem;
 }
 .main-chat .main-chat-content {
+  height: 78vh;
+  overflow-y: scroll;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
+.main-chat .main-chat-content::-webkit-scrollbar {
+  width: 5px;
+}
+.main-chat .main-chat-content::-webkit-scrollbar-track {
+  width: 5px;
+  border-radius: 2.5px;
+}
+.main-chat .main-chat-content::-webkit-scrollbar-thumb {
+  background: #202c33;
+  border-radius: 2.5rem;
+}
+.main-chat .main-chat-content::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 .main-chat .main-chat-content .main-chat-content-wrapper {
+  height: 100%;
   padding: 1rem;
   display: flex;
   flex-direction: column;
