--- a/client/src/components/sidebar/SideBar.css
+++ b/client/src/components/sidebar/SideBar.css
@@ -20,6 +20,19 @@
 .sidebar nav .sidebar-header-profilepic img {
   border-radius: 2.5rem;
 }
+.sidebar nav .sidebar-header-icon {
+  display: flex;
+  gap: 1rem;
+}
+.sidebar nav .sidebar-header-icon .logout {
+  position: absolute;
+  top: 4.2rem;
+  left: 15rem;
+  background: #233138;
+  padding: 0.5rem;
+  border-radius: 3px;
+  box-shadow: 0 2px 5px 0 rgba(11, 20, 26, 0.26), 0 2px 10px 0 rgba(11, 20, 26, 0.16);
+}
 .sidebar nav .sidebar-header-icon:hover {
   cursor: pointer;
 }/*# sourceMappingURL=SideBar.css.map */
