--- a/client/src/components/sidebar/SideBar.scss
+++ b/client/src/components/sidebar/SideBar.scss
@@ -1,6 +1,6 @@
 .sidebar {
   grid-area: sidebar;
-  border-right:0.001rem solid #aebac1;
+  border-right: 0.001rem solid #aebac1;
   nav {
     background: #202c33;
     padding: 0.5rem 1rem;
@@ -19,6 +19,18 @@
       }
     }
     .sidebar-header-icon {
+      display: flex;
+      gap: 1rem;
+      .logout {
+        position: absolute;
+        top: 4.2rem;
+        left: 15rem;
+        background: #233138;
+        padding: 0.5rem;
+        border-radius: 3px;
+        box-shadow: 0 2px 5px 0 rgba(11, 20, 26, 0.26),
+          0 2px 10px 0 rgba(11, 20, 26, 0.16);
+      }
       &:hover {
         cursor: pointer;
       }
