--- a/client/src/components/main/mainChat/MainChat.scss
+++ b/client/src/components/main/mainChat/MainChat.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   height: 100%;
   .main-chat-header {
-    padding: 0.5rem 1rem;
+    padding: 0.38rem 1rem;
     background-color: #202c33;
     display: flex;
     justify-content: space-between;
@@ -21,8 +21,12 @@
     }
     .main-chat-header-options {
       display: flex;
-      gap: 3rem;
-      svg{
+      gap: 1rem;
+      align-items: center;
+      .icon-options {
+        height: 1rem;
+      }
+      svg {
         cursor: pointer;
       }
     }
@@ -66,19 +70,19 @@
         justify-content: flex-end;
         p {
           padding: 0.5rem;
-          background-color: aqua;
+          background-color: #005c4b;
           border-radius: 0.5rem;
-          color: black;
+          color: #e9edef;
         }
       }
       .receiver {
         display: flex;
         justify-content: flex-start;
         p {
-          background-color: burlywood;
+          background-color: #202c33;
           padding: 0.5rem;
           border-radius: 0.5rem;
-          color: black;
+          color: white;
         }
       }
     }
