--- a/client/src/components/main/mainWelcome/MainWelcome.css
+++ b/client/src/components/main/mainWelcome/MainWelcome.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-bottom: 0.3rem solid #005c4b;
 }
 .main-welcome svg {
   height: 15rem;
