--- a/client/src/components/sidebar/SideBar.scss
+++ b/client/src/components/sidebar/SideBar.scss
@@ -22,6 +22,9 @@
       display: flex;
       gap: 1rem;
       align-items: center;
+      .icon-chat {
+        height: 1.1rem;
+      }
       .icon-options {
         height: 1rem;
       }
