--- a/client/src/components/sidebar/SideBar.scss
+++ b/client/src/components/sidebar/SideBar.scss
@@ -43,4 +43,35 @@
       }
     }
   }
+  .sidebar-chat-search-wrapper {
+    padding: 0.5rem 1rem;
+    .sidebar-chat-search {
+      display: flex;
+      gap: 1rem;
+      align-items: center;
+      .sidebar-chat-search-input-wrapper {
+        display: flex;
+        background: #202c33;
+        gap: 1rem;
+        width: 100%;
+        padding: 0.4rem 0.8rem;
+        border-radius: 0.5rem;
+        &:hover {
+          cursor: pointer;
+        }
+        svg {
+          height: 1.2rem;
+          opacity: 0.6;
+        }
+        input {
+          width: 100%;
+          outline: none;
+          border: none;
+          background: transparent;
+          caret-color: white;
+          color: white;
+        }
+      }
+    }
+  }
 }
