--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,31 +1,40 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  box-sizing:border-box;
+  box-sizing: border-box;
+  outline: none;
+  border:none;
 }
 
 body {
-  
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color:white
+  color: white;
 }
-.hide{
+.hide {
   display: none;
-  
 }
-.show{
+.show {
   display: block;
 }
 
+a {
+  text-decoration: none;
+}
+li{
+  list-style: none;
+}
+button{
+  padding: 0.5rem;
 
-svg{
+}
+svg {
   height: 1.5rem;
   width: 1.5rem;
 }
-img{
+img {
   height: 2.5rem;
 }
