--- a/client/src/pages/register/Register.scss
+++ b/client/src/pages/register/Register.scss
@@ -1,5 +1,5 @@
 .selectuser {
-  background-image: url("../../../assets/signupbg.png");
+  background-image: url("../../assets/signupbg.png");
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
